# Aegis

./: README.md
aegis/: .gitignore  README.md  pyproject.toml
aegis/src/aegis/: crew.py  main.py
aegis/src/aegis/config/: agents.yaml  tasks.yaml
aegis/src/aegis/tools/: custom_tool.py
